--- a/java_practice/index.html
+++ b/java_practice/index.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="timeline"></div>
+    <button type="button" id="button">モンスターボールをなげる</button>
+    <div id="output"></div>
     <script src="./app.js"></script>
 </body>
 </html>
